--- a/interface/admin.html
+++ b/interface/admin.html
@@ -35,11 +35,19 @@
 		</div>
 
 		<div class="button_box">
-			<button class="button" type="button">
+			<button
+				class="button"
+				type="button"
+				onclick="admin_kommunikation('stop')"
+			>
 				Automatik Stop Grundstellung
 			</button>
 
-			<button class="button" type="button">
+			<button
+				class="button"
+				type="button"
+				onclick="admin_kommunikation('start')"
+			>
 				Automatik Start
 			</button>
 			<button
@@ -70,7 +78,11 @@
 				Datenbank reset
 			</button>
 
-			<button class="button" type="button">
+			<button
+				class="button"
+				type="button"
+				onclick="admin_kommunikation('herunterfahren')"
+			>
 				Herunterfahren
 			</button>
 		</div>
