admin basic function

--- a/interface/admin.html
+++ b/interface/admin.html
@@ -38,7 +38,7 @@
 			<button
 				class="button"
 				type="button"
-				onclick="admin_kommunikation('stop')"
+				onclick="admin_kommunikation('--stop 1')"
 			>
 				Automatik Stop Grundstellung
 			</button>
@@ -46,7 +46,7 @@
 			<button
 				class="button"
 				type="button"
-				onclick="admin_kommunikation('start')"
+				onclick="admin_kommunikation('--start 1')"
 			>
 				Automatik Start
 			</button>
@@ -81,7 +81,7 @@
 			<button
 				class="button"
 				type="button"
-				onclick="admin_kommunikation('herunterfahren')"
+				onclick="admin_kommunikation('--herunterfahren 1')"
 			>
 				Herunterfahren
 			</button>
