--- a/interface/admin.html
+++ b/interface/admin.html
@@ -55,7 +55,7 @@
 				type="button"
 				onclick="manuelle_aktorsteuerung()"
 			>
-				Manuelle Aktorsteuerung
+				Handbetrieb
 			</button>
 
 			<button class="button" type="button" onclick="systemuebersicht()">
@@ -94,7 +94,7 @@
 
 		<div class="hmi_box manuelle_aktorsteuerung" id="aktorsteuerung">
 			<div class="hmi_titel">
-				Manuelle Aktorsteuerung
+				Handbetrieb [Zuerst Automatik stoppen!]
 				<img
 					class="hmi_close"
 					src="/img/close.svg"
