html exit interface

--- a/interface/html/admin.html
+++ b/interface/html/admin.html
@@ -50,12 +50,21 @@
 			>
 				Automatik Start
 			</button>
+
 			<button
 				class="button"
 				type="button"
 				onclick="manuelle_aktorsteuerung()"
 			>
 				Handbetrieb
+			</button>
+
+			<button
+				class="button"
+				type="button"
+				onclick="admin_kommunikation('--interface_verlassen 1')"
+			>
+				Interface verlassen
 			</button>
 
 			<button class="button" type="button" onclick="systemuebersicht()">
