exit interface frontend

--- a/interface/html/admin.html
+++ b/interface/html/admin.html
@@ -62,7 +62,7 @@
 			<button
 				class="button"
 				type="button"
-				onclick="admin_kommunikation('--interface_verlassen 1')"
+				onclick="interface_schliessen()"
 			>
 				Interface verlassen
 			</button>
