--- a/interface/html/admin.html
+++ b/interface/html/admin.html
@@ -293,7 +293,7 @@
 					onclick="betriebsmeldungen()"
 				/>
 			</div>
-			<div class="hmi block_overflow">
+			<div class="hmi">
 				<div
 					class="systemstatus gewaechshaus_status"
 					id="gewaechshaus_status"
@@ -301,6 +301,10 @@
 				<div
 					class="systemstatus bussystem_status"
 					id="bussystem_status"
+				></div>
+				<div
+					class="systemstatus filesystem_status"
+					id="filesystem_status"
 				></div>
 			</div>
 		</div>
