--- a/interface/html/index.html
+++ b/interface/html/index.html
@@ -150,22 +150,8 @@
 						<input
 							required
 							type="hidden"
-							name="betriebsmodus_write"
-							id="betriebsmodus_write"
-						/>
-						<input
-							required
-							type="hidden"
-							name="parameter_slot"
-							id="parameter_slot"
-							value="1"
-						/>
-						<input
-							required
-							type="hidden"
-							name="programm_status"
-							id="programm_status"
-							value="0"
+							name="betriebsmodus_stop_write"
+							id="betriebsmodus_stop_write"
 						/>
 						<input
 							class="button_abbrechen"
